@@ -3,11 +3,10 @@ package org.jabref.gui.entryeditor;
 import java.io.IOException;
 import java.io.StringReader;
 import java.io.StringWriter;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 import javax.swing.undo.UndoManager;
 
@@ -21,7 +20,6 @@ import javafx.scene.input.InputMethodRequests;
 import javafx.scene.input.KeyEvent;
 
 import org.jabref.gui.DialogService;
-import org.jabref.gui.StateManager;
 import org.jabref.gui.actions.ActionFactory;
 import org.jabref.gui.actions.SimpleCommand;
 import org.jabref.gui.actions.StandardActions;
@@ -32,7 +30,8 @@ import org.jabref.gui.undo.CountingUndoManager;
 import org.jabref.gui.undo.NamedCompound;
 import org.jabref.gui.undo.UndoableChangeType;
 import org.jabref.gui.undo.UndoableFieldChange;
-import org.jabref.gui.util.DefaultTaskExecutor;
+import org.jabref.gui.util.OptionalObjectProperty;
+import org.jabref.gui.util.UiTaskExecutor;
 import org.jabref.logic.bibtex.BibEntryWriter;
 import org.jabref.logic.bibtex.FieldPreferences;
 import org.jabref.logic.bibtex.FieldWriter;
@@ -42,15 +41,16 @@ import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.logic.importer.ParserResult;
 import org.jabref.logic.importer.fileformat.BibtexParser;
 import org.jabref.logic.l10n.Localization;
-import org.jabref.logic.search.SearchQuery;
-import org.jabref.logic.util.OS;
+import org.jabref.logic.search.retrieval.Highlighter;
 import org.jabref.model.database.BibDatabase;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.database.BibDatabaseMode;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.BibEntryTypesManager;
 import org.jabref.model.entry.field.Field;
+import org.jabref.model.search.query.SearchQuery;
 import org.jabref.model.util.FileUpdateMonitor;
+import org.jabref.model.util.Range;
 
 import de.saxsys.mvvmfx.utils.validation.ObservableRuleBasedValidator;
 import de.saxsys.mvvmfx.utils.validation.ValidationMessage;
@@ -63,6 +63,8 @@ import org.slf4j.LoggerFactory;
 public class SourceTab extends EntryEditorTab {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(SourceTab.class);
+    private static final String TEXT_STYLE = "text";
+    private static final String SEARCH_STYLE = "search";
     private final FieldPreferences fieldPreferences;
     private final BibDatabaseMode mode;
     private final UndoManager undoManager;
@@ -71,33 +73,12 @@ public class SourceTab extends EntryEditorTab {
     private final ImportFormatPreferences importFormatPreferences;
     private final FileUpdateMonitor fileMonitor;
     private final DialogService dialogService;
-    private final StateManager stateManager;
     private final BibEntryTypesManager entryTypesManager;
     private final KeyBindingRepository keyBindingRepository;
-    private Optional<Pattern> searchHighlightPattern = Optional.empty();
+    private final OptionalObjectProperty<SearchQuery> searchQueryProperty;
+    private Map<Field, Range> fieldPositions;
     private CodeArea codeArea;
-
     private BibEntry previousEntry;
-
-    private class EditAction extends SimpleCommand {
-
-        private final StandardActions command;
-
-        public EditAction(StandardActions command) {
-            this.command = command;
-        }
-
-        @Override
-        public void execute() {
-            switch (command) {
-                case COPY -> codeArea.copy();
-                case CUT -> codeArea.cut();
-                case PASTE -> codeArea.paste();
-                case SELECT_ALL -> codeArea.selectAll();
-            }
-            codeArea.requestFocus();
-        }
-    }
 
     public SourceTab(BibDatabaseContext bibDatabaseContext,
                      CountingUndoManager undoManager,
@@ -105,9 +86,9 @@ public class SourceTab extends EntryEditorTab {
                      ImportFormatPreferences importFormatPreferences,
                      FileUpdateMonitor fileMonitor,
                      DialogService dialogService,
-                     StateManager stateManager,
                      BibEntryTypesManager entryTypesManager,
-                     KeyBindingRepository keyBindingRepository) {
+                     KeyBindingRepository keyBindingRepository,
+                     OptionalObjectProperty<SearchQuery> searchQueryProperty) {
         this.mode = bibDatabaseContext.getMode();
         this.setText(Localization.lang("%0 source", mode.getFormattedName()));
         this.setTooltip(new Tooltip(Localization.lang("Show/edit %0 source", mode.getFormattedName())));
@@ -117,34 +98,62 @@ public class SourceTab extends EntryEditorTab {
         this.importFormatPreferences = importFormatPreferences;
         this.fileMonitor = fileMonitor;
         this.dialogService = dialogService;
-        this.stateManager = stateManager;
         this.entryTypesManager = entryTypesManager;
         this.keyBindingRepository = keyBindingRepository;
-
-        stateManager.activeSearchQueryProperty().addListener((observable, oldValue, newValue) -> {
-            searchHighlightPattern = newValue.flatMap(SearchQuery::getPatternForWords);
-            highlightSearchPattern();
-        });
+        this.searchQueryProperty = searchQueryProperty;
+        searchQueryProperty.addListener((observable, oldValue, newValue) -> highlightSearchPattern());
     }
 
     private void highlightSearchPattern() {
-        if (searchHighlightPattern.isPresent() && (codeArea != null)) {
-            codeArea.setStyleClass(0, codeArea.getLength(), "text");
-            Matcher matcher = searchHighlightPattern.get().matcher(codeArea.getText());
-            while (matcher.find()) {
-                for (int i = 0; i <= matcher.groupCount(); i++) {
-                    codeArea.setStyleClass(matcher.start(), matcher.end(), "search");
-                }
+        if (codeArea == null) {
+            return;
+        }
+
+        codeArea.setStyleClass(0, codeArea.getLength(), TEXT_STYLE);
+        if (searchQueryProperty.get().isEmpty()) {
+            return;
+        }
+
+        Map<Optional<Field>, List<String>> searchTermsMap = Highlighter.groupTermsByField(searchQueryProperty.get().get());
+        searchTermsMap.forEach((optionalField, terms) -> {
+            Optional<String> searchPattern = Highlighter.buildSearchPattern(terms);
+            if (searchPattern.isEmpty()) {
+                return;
             }
+
+            if (optionalField.isPresent()) {
+                highlightField(optionalField.get(), searchPattern.get());
+            } else {
+                fieldPositions.keySet().forEach(field -> highlightField(field, searchPattern.get()));
+            }
+        });
+    }
+
+    private void highlightField(Field field, String searchPattern) {
+        Range fieldPosition = fieldPositions.get(field);
+        if (fieldPosition == null) {
+            return;
+        }
+
+        int start = fieldPosition.start();
+        int end = fieldPosition.end();
+        List<Range> matchedPositions = Highlighter.findMatchPositions(codeArea.getText(start, end), searchPattern);
+
+        for (Range range : matchedPositions) {
+            codeArea.setStyleClass(start + range.start() - 1, start + range.end(), SEARCH_STYLE);
         }
     }
 
     private String getSourceString(BibEntry entry, BibDatabaseMode type, FieldPreferences fieldPreferences) throws IOException {
         StringWriter writer = new StringWriter();
-        BibWriter bibWriter = new BibWriter(writer, OS.NEWLINE);
+        BibWriter bibWriter = new BibWriter(writer, "\n"); // JavaFX works with LF only
         FieldWriter fieldWriter = FieldWriter.buildIgnoreHashes(fieldPreferences);
-        new BibEntryWriter(fieldWriter, entryTypesManager).write(entry, bibWriter, type);
-        return writer.toString();
+        BibEntryWriter bibEntryWriter = new BibEntryWriter(fieldWriter, entryTypesManager);
+        bibEntryWriter.write(entry, bibWriter, type, true);
+        fieldPositions = bibEntryWriter.getFieldPositions();
+        String sourceString = writer.toString();
+        writer.close();
+        return sourceString;
     }
 
     /* Work around for different input methods.
@@ -164,7 +173,6 @@ public class SourceTab extends EntryEditorTab {
 
         @Override
         public void cancelLatestCommittedText() {
-            return;
         }
 
         @Override
@@ -187,7 +195,7 @@ public class SourceTab extends EntryEditorTab {
         codeArea.addEventFilter(KeyEvent.KEY_PRESSED, event -> CodeAreaKeyBindings.call(codeArea, event, keyBindingRepository));
         codeArea.addEventFilter(KeyEvent.KEY_PRESSED, this::listenForSaveKeybinding);
 
-        ActionFactory factory = new ActionFactory(keyBindingRepository);
+        ActionFactory factory = new ActionFactory();
         ContextMenu contextMenu = new ContextMenu();
         contextMenu.getItems().addAll(
                 factory.createMenuItem(StandardActions.CUT, new EditAction(StandardActions.CUT)),
@@ -228,7 +236,7 @@ public class SourceTab extends EntryEditorTab {
     }
 
     private void updateCodeArea() {
-        DefaultTaskExecutor.runAndWaitInJavaFXThread(() -> {
+        UiTaskExecutor.runAndWaitInJavaFXThread(() -> {
             if (codeArea == null) {
                 setupSourceEditor();
             }
@@ -277,7 +285,7 @@ public class SourceTab extends EntryEditorTab {
             if (!database.hasEntries()) {
                 if (parserResult.hasWarnings()) {
                     // put the warning into as exception text -> it will be displayed to the user
-                    throw new IllegalStateException(parserResult.warnings().get(0));
+                    throw new IllegalStateException(parserResult.warnings().getFirst());
                 } else {
                     throw new IllegalStateException("No entries found.");
                 }
@@ -289,7 +297,7 @@ public class SourceTab extends EntryEditorTab {
             }
 
             NamedCompound compound = new NamedCompound(Localization.lang("source edit"));
-            BibEntry newEntry = database.getEntries().get(0);
+            BibEntry newEntry = database.getEntries().getFirst();
             String newKey = newEntry.getCitationKey().orElse(null);
 
             if (newKey != null) {
@@ -340,12 +348,30 @@ public class SourceTab extends EntryEditorTab {
 
     private void listenForSaveKeybinding(KeyEvent event) {
         keyBindingRepository.mapToKeyBinding(event).ifPresent(binding -> {
-
             switch (binding) {
-                case SAVE_DATABASE, SAVE_ALL, SAVE_DATABASE_AS -> {
-                    storeSource(currentEntry, codeArea.textProperty().getValue());
-                }
+                case SAVE_DATABASE, SAVE_ALL, SAVE_DATABASE_AS ->
+                        storeSource(currentEntry, codeArea.textProperty().getValue());
             }
         });
+    }
+
+    private class EditAction extends SimpleCommand {
+
+        private final StandardActions command;
+
+        public EditAction(StandardActions command) {
+            this.command = command;
+        }
+
+        @Override
+        public void execute() {
+            switch (command) {
+                case COPY -> codeArea.copy();
+                case CUT -> codeArea.cut();
+                case PASTE -> codeArea.paste();
+                case SELECT_ALL -> codeArea.selectAll();
+            }
+            codeArea.requestFocus();
+        }
     }
 }
