@@ -21,7 +21,7 @@ public class ExporterViewModel {
         this.name.setValue(exporter.getName());
         this.layoutFileName.setValue(exporter.getLayoutFileNameWithExtension());
         // Only the first of the extensions gotten from FileType is saved into the class using get(0)
-        String extensionString = exporter.getFileType().getExtensions().get(0);
+        String extensionString = exporter.getFileType().getExtensions().getFirst();
         this.extension.setValue(extensionString);
     }
 
