@@ -23,17 +23,17 @@ import javafx.scene.control.TreeItem;
 
 import org.jabref.gui.AbstractViewModel;
 import org.jabref.gui.DialogService;
-import org.jabref.gui.util.BackgroundTask;
 import org.jabref.gui.util.DirectoryDialogConfiguration;
 import org.jabref.gui.util.FileNodeViewModel;
-import org.jabref.gui.util.TaskExecutor;
 import org.jabref.logic.l10n.Localization;
+import org.jabref.logic.preferences.CliPreferences;
 import org.jabref.logic.texparser.DefaultLatexParser;
 import org.jabref.logic.texparser.TexBibEntriesResolver;
+import org.jabref.logic.util.BackgroundTask;
+import org.jabref.logic.util.TaskExecutor;
 import org.jabref.logic.util.io.FileUtil;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.util.FileUpdateMonitor;
-import org.jabref.preferences.PreferencesService;
 
 import de.saxsys.mvvmfx.utils.validation.FunctionBasedValidator;
 import de.saxsys.mvvmfx.utils.validation.ValidationMessage;
@@ -49,7 +49,7 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
     private final BibDatabaseContext databaseContext;
     private final DialogService dialogService;
     private final TaskExecutor taskExecutor;
-    private final PreferencesService preferencesService;
+    private final CliPreferences preferences;
     private final FileUpdateMonitor fileMonitor;
     private final StringProperty latexFileDirectory;
     private final Validator latexDirectoryValidator;
@@ -62,15 +62,15 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
     public ParseLatexDialogViewModel(BibDatabaseContext databaseContext,
                                      DialogService dialogService,
                                      TaskExecutor taskExecutor,
-                                     PreferencesService preferencesService,
+                                     CliPreferences preferences,
                                      FileUpdateMonitor fileMonitor) {
         this.databaseContext = databaseContext;
         this.dialogService = dialogService;
         this.taskExecutor = taskExecutor;
-        this.preferencesService = preferencesService;
+        this.preferences = preferences;
         this.fileMonitor = fileMonitor;
-        this.latexFileDirectory = new SimpleStringProperty(databaseContext.getMetaData().getLatexFileDirectory(preferencesService.getFilePreferences().getUserAndHost())
-                                                                          .orElse(FileUtil.getInitialDirectory(databaseContext, preferencesService.getFilePreferences().getWorkingDirectory()))
+        this.latexFileDirectory = new SimpleStringProperty(databaseContext.getMetaData().getLatexFileDirectory(preferences.getFilePreferences().getUserAndHost())
+                                                                          .orElse(FileUtil.getInitialDirectory(databaseContext, preferences.getFilePreferences().getWorkingDirectory()))
                                                                           .toAbsolutePath().toString());
         this.root = new SimpleObjectProperty<>();
         this.checkedFileList = FXCollections.observableArrayList();
@@ -117,7 +117,7 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
 
         dialogService.showDirectorySelectionDialog(directoryDialogConfiguration).ifPresent(selectedDirectory -> {
             latexFileDirectory.set(selectedDirectory.toAbsolutePath().toString());
-            preferencesService.getFilePreferences().setWorkingDirectory(selectedDirectory.toAbsolutePath());
+            preferences.getFilePreferences().setWorkingDirectory(selectedDirectory.toAbsolutePath());
         });
     }
 
@@ -145,7 +145,7 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
     private void handleFailure(Exception exception) {
         final boolean permissionProblem = (exception instanceof IOException) && (exception.getCause() instanceof FileSystemException) && exception.getCause().getMessage().endsWith("Operation not permitted");
         if (permissionProblem) {
-            dialogService.showErrorDialogAndWait(String.format(Localization.lang("JabRef does not have permission to access %s"), exception.getCause().getMessage()));
+            dialogService.showErrorDialogAndWait(Localization.lang("JabRef does not have permission to access %s").formatted(exception.getCause().getMessage()));
         } else {
             dialogService.showErrorDialogAndWait(exception);
         }
@@ -153,7 +153,7 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
 
     private FileNodeViewModel searchDirectory(Path directory) throws IOException {
         if ((directory == null) || !directory.toFile().isDirectory()) {
-            throw new IOException(String.format("Invalid directory for searching: %s", directory));
+            throw new IOException("Invalid directory for searching: %s".formatted(directory));
         }
 
         FileNodeViewModel parent = new FileNodeViewModel(directory);
@@ -162,7 +162,7 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
         try (Stream<Path> filesStream = Files.list(directory)) {
             fileListPartition = filesStream.collect(Collectors.partitioningBy(path -> path.toFile().isDirectory()));
         } catch (IOException e) {
-            LOGGER.error(String.format("%s while searching files: %s", e.getClass().getName(), e.getMessage()));
+            LOGGER.error("%s while searching files: %s".formatted(e.getClass().getName(), e.getMessage()), e);
             return parent;
         }
 
@@ -170,7 +170,7 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
         List<Path> files = fileListPartition.get(false)
                                             .stream()
                                             .filter(path -> path.toString().endsWith(TEX_EXT))
-                                            .collect(Collectors.toList());
+                                            .toList();
         int fileCount = 0;
 
         for (Path subDirectory : subDirectories) {
@@ -185,7 +185,7 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
         parent.setFileCount(files.size() + fileCount);
         parent.getChildren().addAll(files.stream()
                                          .map(FileNodeViewModel::new)
-                                         .collect(Collectors.toList()));
+                                         .toList());
         return parent;
     }
 
@@ -196,7 +196,7 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
         List<Path> fileList = checkedFileList.stream()
                                              .map(item -> item.getValue().getPath())
                                              .filter(path -> path.toFile().isFile())
-                                             .collect(Collectors.toList());
+                                             .toList();
         if (fileList.isEmpty()) {
             LOGGER.warn("There are no valid files checked");
             return;
@@ -204,8 +204,7 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
 
         TexBibEntriesResolver entriesResolver = new TexBibEntriesResolver(
                 databaseContext.getDatabase(),
-                preferencesService.getLibraryPreferences(),
-                preferencesService.getImportFormatPreferences(),
+                preferences.getImportFormatPreferences(),
                 fileMonitor);
 
         BackgroundTask.wrap(() -> entriesResolver.resolve(new DefaultLatexParser().parse(fileList)))
