@@ -18,6 +18,7 @@ import org.jabref.logic.importer.ImporterPreferences;
 import org.jabref.logic.importer.WebFetchers;
 import org.jabref.logic.net.URLDownload;
 import org.jabref.logic.preferences.DOIPreferences;
+import org.jabref.logic.util.URLUtil;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.entry.identifier.DOI;
@@ -40,7 +41,7 @@ import org.slf4j.LoggerFactory;
 public class DoiResolution implements FulltextFetcher {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(DoiResolution.class);
-    private DOIPreferences doiPreferences;
+    private final DOIPreferences doiPreferences;
 
     public DoiResolution(DOIPreferences doiPreferences) {
         super();
@@ -61,7 +62,7 @@ public class DoiResolution implements FulltextFetcher {
 
         String doiLink;
         if (doiPreferences.isUseCustom()) {
-            base = new URL(doiPreferences.getDefaultBaseURI());
+            base = URLUtil.create(doiPreferences.getDefaultBaseURI());
             doiLink = doi.get()
                          .getExternalURIWithCustomBase(base.toString())
                          .map(URI::toASCIIString)
@@ -110,25 +111,25 @@ public class DoiResolution implements FulltextFetcher {
                 // See https://github.com/lehner/LocalCopy for more scrape ideas
                 // link with "PDF" in title tag
                 if (element.attr("title").toLowerCase(Locale.ENGLISH).contains("pdf") && new URLDownload(href).isPdf()) {
-                    return Optional.of(new URL(href));
+                    return Optional.of(URLUtil.create(href));
                 }
 
                 if (href.contains("pdf") || hrefText.contains("pdf") && new URLDownload(href).isPdf()) {
-                    links.add(new URL(href));
+                    links.add(URLUtil.create(href));
                 }
             }
 
             // return if only one link was found (high accuracy)
             if (links.size() == 1) {
                 LOGGER.info("Fulltext PDF found @ {}", doiLink);
-                return Optional.of(links.get(0));
+                return Optional.of(links.getFirst());
             }
             // return if links are equal
             return findDistinctLinks(links);
         } catch (UnsupportedMimeTypeException type) {
             // this might be the PDF already as we follow redirects
             if (type.getMimeType().startsWith("application/pdf")) {
-                return Optional.of(new URL(type.getUrl()));
+                return Optional.of(URLUtil.create(type.getUrl()));
             }
             LOGGER.warn("DoiResolution fetcher failed: ", type);
         } catch (IOException e) {
@@ -148,7 +149,7 @@ public class DoiResolution implements FulltextFetcher {
 
         if (citationPdfUrl.isPresent()) {
             try {
-                return Optional.of(new URL(citationPdfUrl.get()));
+                return Optional.of(URLUtil.create(citationPdfUrl.get()));
             } catch (MalformedURLException e) {
                 return Optional.empty();
             }
@@ -181,7 +182,7 @@ public class DoiResolution implements FulltextFetcher {
         }
         // equal
         if (distinctLinks.size() == 1) {
-            return Optional.of(distinctLinks.get(0));
+            return Optional.of(distinctLinks.getFirst());
         }
 
         return Optional.empty();
