@@ -14,7 +14,7 @@ import javafx.util.Pair;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.Field;
-import org.jabref.model.entry.field.FieldProperty;
+import org.jabref.model.entry.field.FieldFactory;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -37,14 +37,14 @@ import static uk.ac.ed.ph.snuggletex.definitions.Globals.TEXT_MODE_ONLY;
  */
 public class LatexIntegrityChecker implements EntryChecker {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(SnuggleSession.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(LatexIntegrityChecker.class);
     private static final SnuggleEngine ENGINE = new SnuggleEngine();
     private static final SnuggleSession SESSION;
-    private static final ResourceBundle ERROR_MESSAGES = ENGINE.getPackages().get(0).getErrorMessageBundle();
+    private static final ResourceBundle ERROR_MESSAGES = ENGINE.getPackages().getFirst().getErrorMessageBundle();
     private static final Set<ErrorCode> EXCLUDED_ERRORS = new HashSet<>();
 
     static {
-        SnugglePackage snugglePackage = ENGINE.getPackages().get(0);
+        SnugglePackage snugglePackage = ENGINE.getPackages().getFirst();
         snugglePackage.addComplexCommand("textgreater", false, 0, TEXT_MODE_ONLY, null, null, null);
         snugglePackage.addComplexCommand("textless", false, 0, TEXT_MODE_ONLY, null, null, null);
         snugglePackage.addComplexCommand("textbackslash", false, 0, TEXT_MODE_ONLY, null, null, null);
@@ -62,7 +62,7 @@ public class LatexIntegrityChecker implements EntryChecker {
     @Override
     public List<IntegrityMessage> check(BibEntry entry) {
         return entry.getFieldMap().entrySet().stream()
-                    .filter(field -> !field.getKey().getProperties().contains(FieldProperty.VERBATIM))
+                    .filter(field -> FieldFactory.isLatexField(field.getKey()))
                     .flatMap(LatexIntegrityChecker::getUnescapedAmpersandsWithCount)
                     // Exclude all DOM building errors as this functionality is not used.
                     .filter(pair -> !pair.getValue().getErrorCode().getErrorGroup().equals(CoreErrorGroup.TDE))
@@ -87,7 +87,7 @@ public class LatexIntegrityChecker implements EntryChecker {
         // Retrieve the first error only because it is likely to be more meaningful.
         // Displaying all (subsequent) faults may lead to confusion.
         // We further get a slight performance benefit from failing fast (see static config in class header).
-        InputError error = SESSION.getErrors().get(0);
+        InputError error = SESSION.getErrors().getFirst();
         return Stream.of(new Pair<>(entry.getKey(), error));
     }
 
