@@ -62,7 +62,7 @@ public class PdfAnnotationImporter implements AnnotationImporter {
                 }
             }
         } catch (IOException e) {
-            LOGGER.error(String.format("Failed to read file '%s'.", path), e);
+            LOGGER.error("Failed to read file '%s'.".formatted(path), e);
         }
         return annotationsList;
     }
@@ -72,7 +72,7 @@ public class PdfAnnotationImporter implements AnnotationImporter {
             return false;
         }
         if ("Link".equals(annotation.getSubtype()) || "Widget".equals(annotation.getSubtype())) {
-            LOGGER.debug(annotation.getSubtype() + " is excluded from the supported file annotations");
+            LOGGER.debug("{} is excluded from the supported file annotations", annotation.getSubtype());
             return false;
         }
         try {
@@ -80,7 +80,7 @@ public class PdfAnnotationImporter implements AnnotationImporter {
                 return false;
             }
         } catch (IllegalArgumentException e) {
-            LOGGER.debug(String.format("Could not parse the FileAnnotation %s into any known FileAnnotationType. It was %s!", annotation, annotation.getSubtype()));
+            LOGGER.debug("Could not parse the FileAnnotation {} into any known FileAnnotationType. It was {}.", annotation, annotation.getSubtype());
         }
         return true;
     }
@@ -107,17 +107,17 @@ public class PdfAnnotationImporter implements AnnotationImporter {
         Objects.requireNonNull(path);
 
         if (!path.toString().toLowerCase(Locale.ROOT).endsWith(".pdf")) {
-            LOGGER.warn(String.format("File '%s' does not end with .pdf!", path));
+            LOGGER.warn("File '%s' does not end with .pdf!".formatted(path));
             return false;
         }
 
         if (!Files.exists(path)) {
-            LOGGER.warn(String.format("File '%s' does not exist!", path));
+            LOGGER.warn("File '%s' does not exist!".formatted(path));
             return false;
         }
 
         if (!Files.isRegularFile(path) || !Files.isReadable(path)) {
-            LOGGER.warn(String.format("File '%s' is not readable!", path));
+            LOGGER.warn("File '%s' is not readable!".formatted(path));
             return false;
         }
 
