@@ -5,6 +5,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import org.jabref.logic.formatter.IdentityFormatter;
 import org.jabref.logic.formatter.bibtexfields.EscapeAmpersandsFormatter;
@@ -18,11 +19,15 @@ import org.jabref.logic.formatter.casechanger.LowerCaseFormatter;
 import org.jabref.logic.layout.format.ReplaceUnicodeLigaturesFormatter;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.Field;
+import org.jabref.model.entry.field.InternalField;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.entry.types.StandardEntryType;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -31,7 +36,7 @@ public class FieldFormatterCleanupsTest {
     private BibEntry entry;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         entry = new BibEntry(StandardEntryType.InProceedings)
                 .withCitationKey("6055279")
                 .withField(StandardField.TITLE, "Educational session 1")
@@ -45,7 +50,7 @@ public class FieldFormatterCleanupsTest {
     }
 
     @Test
-    public void checkSimpleUseCase() {
+    void checkSimpleUseCase() {
         FieldFormatterCleanups actions = new FieldFormatterCleanups(true, FieldFormatterCleanups.parse("title[identity]"));
 
         FieldFormatterCleanup identityInTitle = new FieldFormatterCleanup(StandardField.TITLE, new IdentityFormatter());
@@ -57,7 +62,7 @@ public class FieldFormatterCleanupsTest {
     }
 
     @Test
-    public void invalidSaveActionSting() {
+    void invalidSaveActionSting() {
         FieldFormatterCleanups actions = new FieldFormatterCleanups(true, FieldFormatterCleanups.parse("title"));
 
         assertEquals(Collections.emptyList(), actions.getConfiguredActions());
@@ -68,11 +73,11 @@ public class FieldFormatterCleanupsTest {
     }
 
     @Test
-    public void checkLowerCaseSaveAction() {
+    void checkLowerCaseSaveAction() {
         FieldFormatterCleanups actions = new FieldFormatterCleanups(true, FieldFormatterCleanups.parse("title[lower_case]"));
 
         FieldFormatterCleanup lowerCaseTitle = new FieldFormatterCleanup(StandardField.TITLE, new LowerCaseFormatter());
-        assertEquals(Collections.singletonList(lowerCaseTitle), actions.getConfiguredActions());
+        assertEquals(List.of(lowerCaseTitle), actions.getConfiguredActions());
 
         actions.applySaveActions(entry);
 
@@ -80,7 +85,7 @@ public class FieldFormatterCleanupsTest {
     }
 
     @Test
-    public void checkTwoSaveActionsForOneField() {
+    void checkTwoSaveActionsForOneField() {
         FieldFormatterCleanups actions = new FieldFormatterCleanups(true, FieldFormatterCleanups.parse("title[lower_case,identity]"));
 
         FieldFormatterCleanup lowerCaseTitle = new FieldFormatterCleanup(StandardField.TITLE, new LowerCaseFormatter());
@@ -93,7 +98,7 @@ public class FieldFormatterCleanupsTest {
     }
 
     @Test
-    public void checkThreeSaveActionsForOneField() {
+    void checkThreeSaveActionsForOneField() {
         FieldFormatterCleanups actions = new FieldFormatterCleanups(true, FieldFormatterCleanups.parse("title[lower_case,identity,normalize_date]"));
 
         FieldFormatterCleanup lowerCaseTitle = new FieldFormatterCleanup(StandardField.TITLE, new LowerCaseFormatter());
@@ -107,7 +112,7 @@ public class FieldFormatterCleanupsTest {
     }
 
     @Test
-    public void checkMultipleSaveActions() {
+    void checkMultipleSaveActions() {
         FieldFormatterCleanups actions = new FieldFormatterCleanups(true, FieldFormatterCleanups.parse("pages[normalize_page_numbers]title[lower_case]"));
         List<FieldFormatterCleanup> formatterCleanups = actions.getConfiguredActions();
 
@@ -122,7 +127,7 @@ public class FieldFormatterCleanupsTest {
     }
 
     @Test
-    public void checkMultipleSaveActionsWithMultipleFormatters() {
+    void checkMultipleSaveActionsWithMultipleFormatters() {
         FieldFormatterCleanups actions = new FieldFormatterCleanups(true,
                 FieldFormatterCleanups.parse("pages[normalize_page_numbers,normalize_date]title[lower_case]"));
         List<FieldFormatterCleanup> formatterCleanups = actions.getConfiguredActions();
@@ -139,7 +144,7 @@ public class FieldFormatterCleanupsTest {
     }
 
     @Test
-    public void clearFormatterRemovesField() {
+    void clearFormatterRemovesField() {
         FieldFormatterCleanups actions = new FieldFormatterCleanups(true, FieldFormatterCleanups.parse("month[clear]"));
         actions.applySaveActions(entry);
 
@@ -310,6 +315,24 @@ public class FieldFormatterCleanupsTest {
     }
 
     @Test
+    void identityCanBeParsed() {
+        List<FieldFormatterCleanup> fieldFormatterCleanups = FieldFormatterCleanups.parse("""
+                all-text-fields[identity]
+                date[normalize_date]
+                month[normalize_month]
+                pages[normalize_page_numbers]
+                """);
+        assertEquals(
+                List.of(
+                        new FieldFormatterCleanup(InternalField.INTERNAL_ALL_TEXT_FIELDS_FIELD, new IdentityFormatter()),
+                        new FieldFormatterCleanup(StandardField.DATE, new NormalizeDateFormatter()),
+                        new FieldFormatterCleanup(StandardField.MONTH, new NormalizeMonthFormatter()),
+                        new FieldFormatterCleanup(StandardField.PAGES, new NormalizePagesFormatter())
+                ),
+                fieldFormatterCleanups);
+    }
+
+    @Test
     void getMetaDataStringWorks() {
         assertEquals("""
                 pages[normalize_page_numbers]
@@ -329,8 +352,16 @@ public class FieldFormatterCleanupsTest {
                 """));
     }
 
-    @Test
-    void formatterFromString() {
-        assertEquals(new ReplaceUnicodeLigaturesFormatter(), FieldFormatterCleanups.getFormatterFromString("replace_unicode_ligatures"));
+    public static Stream<Arguments> formatterFromString() {
+        return Stream.of(
+                Arguments.of(new ReplaceUnicodeLigaturesFormatter(), "replace_unicode_ligatures"),
+                Arguments.of(new LowerCaseFormatter(), "lower_case")
+        );
+    }
+
+    @ParameterizedTest
+    @MethodSource
+    void formatterFromString(Formatter expected, String input) {
+        assertEquals(expected, FieldFormatterCleanups.getFormatterFromString(input));
     }
 }
