@@ -6,7 +6,6 @@ import java.io.InputStream;
 import java.io.StringReader;
 import java.net.URISyntaxException;
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -14,7 +13,7 @@ import java.util.function.Predicate;
 import java.util.stream.Stream;
 
 import org.jabref.logic.bibtex.BibEntryAssert;
-import org.jabref.logic.util.StandardFileType;
+import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.entry.types.StandardEntryType;
@@ -23,13 +22,17 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.function.Executable;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.MethodSource;
+import org.mockito.Answers;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 class MedlinePlainImporterTest {
 
@@ -48,22 +51,14 @@ class MedlinePlainImporterTest {
 
     @BeforeEach
     void setUp() {
-        importer = new MedlinePlainImporter();
-    }
-
-    @Test
-    void testsGetExtensions() {
-        assertEquals(StandardFileType.MEDLINE_PLAIN, importer.getFileType());
-    }
-
-    @Test
-    void testGetDescription() {
-        assertEquals("Importer for the MedlinePlain format.", importer.getDescription());
+        ImportFormatPreferences importFormatPreferences = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
+        when(importFormatPreferences.bibEntryPreferences().getKeywordSeparator()).thenReturn(',');
+        importer = new MedlinePlainImporter(importFormatPreferences);
     }
 
     @ParameterizedTest
     @MethodSource("fileNames")
-    void testIsRecognizedFormat(String fileName) throws Exception {
+    void isRecognizedFormat(String fileName) throws Exception {
         ImporterTestEngine.testIsRecognizedFormat(importer, fileName);
     }
 
@@ -73,12 +68,12 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testImportMultipleEntriesInSingleFile() throws IOException, URISyntaxException {
+    void importMultipleEntriesInSingleFile() throws IOException, URISyntaxException {
         Path inputFile = Path.of(MedlinePlainImporter.class.getResource("MedlinePlainImporterTestMultipleEntries.txt").toURI());
 
         List<BibEntry> entries = importer.importDatabase(inputFile).getDatabase()
                                          .getEntries();
-        BibEntry testEntry = entries.get(0);
+        BibEntry testEntry = entries.getFirst();
 
         assertEquals(7, entries.size());
         assertEquals(StandardEntryType.Article, testEntry.getType());
@@ -110,34 +105,35 @@ class MedlinePlainImporterTest {
         assertEquals(StandardEntryType.InProceedings, testEntry.getType());
         assertEquals(Optional.of("Inproceedings book title"), testEntry.getField(StandardField.BOOKTITLE));
 
-        BibEntry expectedEntry5 = new BibEntry(StandardEntryType.Proceedings);
-        expectedEntry5.setField(StandardField.KEYWORDS, "Female");
+        BibEntry expectedEntry5 = new BibEntry(StandardEntryType.Proceedings)
+                .withField(StandardField.KEYWORDS, "Female")
+                        .withField(StandardField.PMID, "96578310");
         assertEquals(expectedEntry5, entries.get(5));
 
-        BibEntry expectedEntry6 = new BibEntry();
-        expectedEntry6.setType(StandardEntryType.Misc);
-        expectedEntry6.setField(StandardField.KEYWORDS, "Female");
+        BibEntry expectedEntry6 = new BibEntry(StandardEntryType.Misc)
+                .withField(StandardField.KEYWORDS, "Female")
+                        .withField(StandardField.PMID, "45984220");
         assertEquals(expectedEntry6, entries.get(6));
     }
 
     @Test
-    void testEmptyFileImport() throws IOException {
+    void emptyFileImport() throws IOException {
         List<BibEntry> emptyEntries = importer.importDatabase(readerForString("")).getDatabase().getEntries();
-
         assertEquals(Collections.emptyList(), emptyEntries);
     }
 
-    @Test
-    void testImportSingleEntriesInSingleFiles() throws IOException, URISyntaxException {
-        List<String> testFiles = Arrays.asList("MedlinePlainImporterTestCompleteEntry",
-                "MedlinePlainImporterTestMultiAbstract", "MedlinePlainImporterTestMultiTitle",
-                "MedlinePlainImporterTestDOI", "MedlinePlainImporterTestInproceeding");
-
-        for (String testFile : testFiles) {
-            String medlineFile = testFile + ".txt";
-            String bibtexFile = testFile + ".bib";
-            assertImportOfMedlineFileEqualsBibtexFile(medlineFile, bibtexFile);
-        }
+    @ParameterizedTest
+    @CsvSource({
+            "MedlinePlainImporterTestCompleteEntry",
+            "MedlinePlainImporterTestMultiAbstract",
+            "MedlinePlainImporterTestMultiTitle",
+            "MedlinePlainImporterTestDOI",
+            "MedlinePlainImporterTestInproceeding"
+    })
+    void importSingleEntriesInSingleFiles(String testFile) throws IOException, URISyntaxException {
+        String medlineFile = testFile + ".txt";
+        String bibtexFile = testFile + ".bib";
+        assertImportOfMedlineFileEqualsBibtexFile(medlineFile, bibtexFile);
     }
 
     private void assertImportOfMedlineFileEqualsBibtexFile(String medlineFile, String bibtexFile)
@@ -147,36 +143,69 @@ class MedlinePlainImporterTest {
         try (InputStream nis = MedlinePlainImporter.class.getResourceAsStream(bibtexFile)) {
             List<BibEntry> entries = importer.importDatabase(file).getDatabase().getEntries();
             assertNotNull(entries);
-            assertEquals(1, entries.size());
-            BibEntryAssert.assertEquals(nis, entries.get(0));
+            BibEntryAssert.assertEquals(nis, entries);
         }
     }
 
     @Test
-    void testMultiLineComments() throws IOException {
-        try (BufferedReader reader = readerForString("PMID-22664220" + "\n" + "CON - Comment1" + "\n" + "CIN - Comment2"
-                + "\n" + "EIN - Comment3" + "\n" + "EFR - Comment4" + "\n" + "CRI - Comment5" + "\n" + "CRF - Comment6"
-                + "\n" + "PRIN- Comment7" + "\n" + "PROF- Comment8" + "\n" + "RPI - Comment9" + "\n" + "RPF - Comment10"
-                + "\n" + "RIN - Comment11" + "\n" + "ROF - Comment12" + "\n" + "UIN - Comment13" + "\n"
-                + "UOF - Comment14" + "\n" + "SPIN- Comment15" + "\n" + "ORI - Comment16")) {
+    void multiLineComments() throws IOException {
+        try (BufferedReader reader = readerForString("""
+                PMID-22664220
+                CON - Comment1
+                CIN - Comment2\
+
+                EIN - Comment3
+                EFR - Comment4
+                CRI - Comment5
+                CRF - Comment6\
+
+                PRIN- Comment7
+                PROF- Comment8
+                RPI - Comment9
+                RPF - Comment10\
+
+                RIN - Comment11
+                ROF - Comment12
+                UIN - Comment13
+                UOF - Comment14
+                SPIN- Comment15
+                ORI - Comment16""")) {
             List<BibEntry> actualEntries = importer.importDatabase(reader).getDatabase().getEntries();
             BibEntry expectedEntry = new BibEntry();
 
+            expectedEntry.setField(StandardField.PMID, "22664220");
             expectedEntry.setField(StandardField.COMMENT,
-                    "Comment1" + "\n" + "Comment2" + "\n" + "Comment3" + "\n" + "Comment4" + "\n" + "Comment5" + "\n"
-                            + "Comment6" + "\n" + "Comment7" + "\n" + "Comment8" + "\n" + "Comment9" + "\n"
-                            + "Comment10" + "\n" + "Comment11" + "\n" + "Comment12" + "\n" + "Comment13" + "\n"
-                            + "Comment14" + "\n" + "Comment15" + "\n" + "Comment16");
+                    """
+                            Comment1
+                            Comment2
+                            Comment3
+                            Comment4
+                            Comment5
+                            Comment6
+                            Comment7
+                            Comment8
+                            Comment9
+                            Comment10
+                            Comment11
+                            Comment12
+                            Comment13
+                            Comment14
+                            Comment15
+                            Comment16""");
             assertEquals(Collections.singletonList(expectedEntry), actualEntries);
         }
     }
 
     @Test
-    void testKeyWords() throws IOException {
-        try (BufferedReader reader = readerForString("PMID-22664795" + "\n" + "MH  - Female" + "\n" + "OT  - Male")) {
+    void keyWords() throws IOException {
+        try (BufferedReader reader = readerForString("""
+                PMID-22664795
+                MH  - Female
+                OT  - Male""")) {
             List<BibEntry> actualEntries = importer.importDatabase(reader).getDatabase().getEntries();
 
             BibEntry expectedEntry = new BibEntry();
+            expectedEntry.setField(StandardField.PMID, "22664795");
             expectedEntry.setField(StandardField.KEYWORDS, "Female, Male");
 
             assertEquals(Collections.singletonList(expectedEntry), actualEntries);
@@ -184,7 +213,7 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testWithNbibFile() throws IOException, URISyntaxException {
+    void withNbibFile() throws IOException, URISyntaxException {
         Path file = Path.of(MedlinePlainImporter.class.getResource("NbibImporterTest.nbib").toURI());
 
         List<BibEntry> entries = importer.importDatabase(file).getDatabase().getEntries();
@@ -193,7 +222,7 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testWithMultipleEntries() throws IOException, URISyntaxException {
+    void withMultipleEntriesInvalidFormat() throws IOException, URISyntaxException {
         Path file = Path.of(MedlinePlainImporter.class.getResource("MedlinePlainImporterStringOutOfBounds.txt").toURI());
 
         List<BibEntry> entries = importer.importDatabase(file).getDatabase().getEntries();
@@ -202,7 +231,7 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testInvalidFormat() throws URISyntaxException, IOException {
+    void invalidFormat() throws URISyntaxException, IOException {
         Path file = Path.of(MedlinePlainImporter.class.getResource("MedlinePlainImporterTestInvalidFormat.xml").toURI());
 
         List<BibEntry> entries = importer.importDatabase(file).getDatabase().getEntries();
@@ -211,7 +240,7 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testNullReader() throws IOException {
+    void nullReader() throws IOException {
         Executable fail = () -> {
             try (BufferedReader reader = null) {
                 importer.importDatabase(reader);
@@ -221,27 +250,33 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testAllArticleTypes() throws IOException {
-        try (BufferedReader reader = readerForString("PMID-22664795" + "\n" + "MH  - Female\n" + "PT  - journal article"
-                + "\n" + "PT  - classical article" + "\n" + "PT  - corrected and republished article" + "\n"
-                + "PT  - introductory journal article" + "\n" + "PT  - newspaper article")) {
+    void allArticleTypes() throws IOException {
+        try (BufferedReader reader = readerForString("""
+                PMID-22664795
+                MH  - Female
+                PT  - journal article\
+
+                PT  - classical article
+                PT  - corrected and republished article
+                PT  - introductory journal article
+                PT  - newspaper article""")) {
             List<BibEntry> actualEntries = importer.importDatabase(reader).getDatabase().getEntries();
 
-            BibEntry expectedEntry = new BibEntry();
-            expectedEntry.setType(StandardEntryType.Article);
-            expectedEntry.setField(StandardField.KEYWORDS, "Female");
+            BibEntry expectedEntry = new BibEntry(StandardEntryType.Article)
+                    .withField(StandardField.KEYWORDS, "Female")
+                    .withField(StandardField.PMID, "22664795");
 
             assertEquals(Collections.singletonList(expectedEntry), actualEntries);
         }
     }
 
     @Test
-    void testGetFormatName() {
+    void getFormatName() {
         assertEquals("Medline/PubMed Plain", importer.getName());
     }
 
     @Test
-    void testGetCLIId() {
+    void getCLIId() {
         assertEquals("medlineplain", importer.getId());
     }
 }
